# compsig

./: .gitignore  README.md  compsig.opam  dune-project  out.py  test.lsc  test.py  test.sc
examples/: ex2.lsc  ex3.lsc  ex4.lsc
lambda_sc/: dune  lambda_sc.ml  parser.mly
lib/: compsig.ml  convert.ml  dune  lambda_sc.ml  lambda_sc_intf.ml  lambda_sc_lexer.mll  monomial.ml  monomial.mli  monomial_intf.ml  polynomial.ml  polynomial.mli  polynomial_intf.ml  signal.ml  signal.mli  signal_intf.ml  supercollider.ml  syntax.ml  utils.ml
lib/lambda_sc_parser/: dune  lexer.mll  parser.mly  syntax.ml
lib/sc_parser/: dune  lexer.mll  parser.mly  syntax.ml
test/: dune  test_compsig.ml  test_monomial.ml  test_polynomial.ml  test_signal.ml
test/cram_tests/: basic_lsc_to_py.t  basic_lsc_to_sc.t
